# proxyBot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build.sh
src/: ProxyBot.cpp  ProxyBot.hpp  allowedUsersId  main.cpp
